--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.theme{
+  --bg: #fff;
+  --bg-panel: #ebebeb;
+  --color-heading: rgb(27, 168, 14); 
+  --color-text: #333333;
+}
+.theme[data-theme='dark'] {
+  --bg: #333333;
+  --bg-panel: #434343;
+  --color-heading: #0077ff; 
+  --color-text: #B5B5B5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  box-sizing:borderbox;
+}
+body{
+  font-family:Arial, Helvetica, sans-serif;
+  background:#333;
+  color:#fff;
+  line-height:1.6;
+  /* height:100vh;
+  width:100vw; */
+  
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  width:100%;
+  position:relative;
+  /* width:100%;
+  height:100%; */
+  /* background-color: pink;
+  border: 5 solid blue;
+   */
+  /* css Smooth Scroll
+  */
+  overflow-y:scroll;
+  scroll-behavior: smooth;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
