--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@
   --color-text: #B5B5B5;
 }
 
-*{
-  box-sizing:borderbox;
+*,*::before,*::after{
+  box-sizing:border-box;
 }
 body{
   font-family:Arial, Helvetica, sans-serif;
@@ -27,6 +27,7 @@ body{
 
 .container{
   width:100%;
+  height:100vh;
   position:relative;
   /* width:100%;
   height:100%; */
@@ -36,6 +37,6 @@ body{
   /* css Smooth Scroll
   */
   overflow-y:scroll;
-  scroll-behavior: smooth;
+  scroll-behavior:smooth;
 }
 
