--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,45 @@
 .Footer{
-    height:40vh;
+    height:25vh;
     width:100%;
-    background-color: black;
+    background-color: #333;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
     
 
+}
+.footmain{
+    display:flex;
+
+    justify-content: space-around;
+    height:80%
+}
+.footend{
+    display:flex;
+    background-color: black;
+    justify-content: space-between;
+    padding-left:50px;
+    padding-right:50px
+}
+.foottext{
+    width:35vw;
+    
+}
+.footend ul{
+    
+    display:flex;
+    flex-direction: row;
+    list-style:none;
+
+
+}
+.circle{
+    height:50px;
+    width:50px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius:25px;
+    background-color:#333;
+    margin-left:30px;
 }
