--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,13 +1,15 @@
 .Landing{
  
     /* background-color: pink; */
-    background-color: #333;
+    background-color: rgba(51, 51, 51,0);;
     position:relative;
     display:flex;
     align-items: center;
     justify-content: center;
-    height:97vh;
+    height:100vh;
     width:100%;
+    max-width: 100%;
+    max-height:100%;
     /* background-image:linear-gradient(90deg,rgba(0,0,0,0),rgba(0,0,0,1)) */
     /* height:50vh;
     width:50vw; */
@@ -15,12 +17,12 @@
 
 .headcontainer{
     display:flex;
-    height:63vh;
+    height:450px;
     width:50vw;
     align-items: center;
     justify-content: center;
     border-radius: 50px;
-    background-color: white;
+    background-color: rgba(255,255,255,0.8);
     /* box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); */
     /* margin-top: 100px; */
 }
