--- a/src/components/Whatwedo.css
+++ b/src/components/Whatwedo.css
@@ -1,6 +1,64 @@
 .Whatwedo{
-height:100vh;
+
+padding-top: 30px;
+padding-bottom:10px;
 /* width:100%; */
 background-color: white;
+color:black
 /* box-shadow:  0px 0px 20px 0px black; */
 }
+.valueshead{
+    text-align:center;
+   
+}
+.valuetags{
+    font-weight: bold;
+}
+.valueshead p{
+    font-size: 30px;
+    font-weight: bold;
+}
+.valuegrid{
+    display:grid;
+    grid-template-columns: 100px 1fr 100px 1fr 100px;
+    grid-template-rows: 40vh 40vh 40vh 40vh ;
+}
+.firstleft{
+    grid-column: 2/4;
+    grid-row:1/2;
+
+}
+.firstright{
+    grid-column: 4/5;
+    grid-row:1/2;
+}
+
+.secondleft{
+    grid-column: 2/3;
+    grid-row:2/3;
+ }
+ .secondright{
+    grid-column: 3/5;
+    grid-row:2/3;
+     }
+
+.thirdleft{
+    grid-column: 2/4;
+    grid-row:3/4;
+ }
+ .thirdright{
+    grid-column: 4/5;
+    grid-row:3/4;
+     }
+.fourthleft{
+    grid-column: 2/3;
+    grid-row:4/5;
+ }
+ .fourthright{
+    grid-column: 3/5;
+    grid-row:4/5;
+ }
+ .images{
+     height:40vh;
+     
+ }
