--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,63 @@
 .Footer{
+    /* height:25vh; */
+    width:100%;
+    background-color: #333;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+
+}
+
+.footmain{
+    display:flex;
+    flex-direction:column;
+    justify-content: space-around;
+    height:80%;
+    align-items: center;
+}
+.footlists{
+    display:flex;
+    width:80%;
+    justify-content:space-around;
+    
+}
+.footend{
+    display:flex;
+    background-color: black;
+    justify-content: space-between;
+    padding-left:50px;
+    padding-right:50px;
+    align-items: center;
+}
+.foottext{
+    width:80%;
+    
+}
+.footend ul{
+    
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style:none;
+
+
+}
+.circle{
+    height:50px;
+    width:50px;
+    display:flex;
+    margin-top:10px;
+    align-items: center;
+    justify-content: center;
+    border-radius:25px;
+    background-color:#333;
+    margin-left:30px;
+}
+
+
+@media only screen and (min-width:600px){
+.Footer{
     height:25vh;
     width:100%;
     background-color: #333;
@@ -10,6 +69,7 @@
 }
 .footmain{
     display:flex;
+    flex-direction:row;
 
     justify-content: space-around;
     height:80%
@@ -22,7 +82,13 @@
     padding-right:50px
 }
 .foottext{
-    width:35vw;
+    width:50%;
+    
+}
+.footlists{
+    display:flex;
+    width:40%;
+    justify-content:space-around;
     
 }
 .footend ul{
@@ -30,6 +96,7 @@
     display:flex;
     flex-direction: row;
     list-style:none;
+    flex-wrap: none;
 
 
 }
@@ -42,4 +109,6 @@
     border-radius:25px;
     background-color:#333;
     margin-left:30px;
+}
+
 }
