--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,7 +1,7 @@
 .form{
-    height:110vh;
     max-width:100%;
     width: 100vw;
+    min-height:110vh;
     background-color: white;
     color:black;
     padding-top:25px;
@@ -12,11 +12,8 @@
 }
 .circles{
     display: flex;
-    margin-left:100px;
-    margin-right:100px;
-    justify-content: space-between;
+    justify-content: space-evenly;
   
-
 }
 .circle{
     height:50px;
@@ -27,7 +24,7 @@
     justify-content: center;
     border-radius:25px;
     background-color:#333;
-    margin-left:30px;
+    margin-left:10px;
 }
 .squarecontainer{
     display:flex;
@@ -43,11 +40,107 @@ height:50%;
 }
 .formcontainer{
     display: flex;
+    flex-direction:column;
+   
+    border-radius: 10px;
+    background-color: lightgray;
+    height:100vh;
+}
+
+.formfields{
+    padding:30px;
+    display: grid;
+
+    height:100%;
+    color:black;
+    grid-template-rows:repeat(8,1fr);
+    grid-template-columns:1fr;
+}
+.headname{     grid-row:1/2;}
+.fullname{     grid-row:2/3; }
+.emailaddress{ grid-row:3/4;}
+.subject{      grid-row:4/5;}
+.message{      grid-row:5/7;}
+.sendbuttonspace{
+    grid-row:7/8;
+    display:flex;
+    align-items:"center";
+    justify-content: center;
+}
+.sendbutton{
+height:50px;
+width:60%;
+background-color: grey;
+display:flex;
+border-radius:8px;
+align-items:center;
+justify-content: center;
+}
+.controlitem{
+    display:flex;
+    flex-direction: column;
+}
+.formcontrol{
+    font-size: 14px;
+    position:relative;
+    border:none;
+    background:#f2f2f2;
+    padding:12px;
+    border-radius:3px;
+    margin-right:8px;
+    border-bottom: 1px solid black;
+    
+}
+.formimage{
+    width:0%;
+    height:0%;
+    display: none;
+    background-image: black;
+    
+}
+.formimage img{
+width:100%;
+height:100%;
+object-fit: cover;
+}
+
+@media only screen and (min-width:600px){
+
+    .circles{
+        display: flex;
+        margin-left:100px;
+        margin-right:100px;
+        justify-content: space-between;
+      
+    }
+    .form{
+        height:110vh;
+        max-width:100%;
+        width: 100vw;
+        background-color: white;
+        color:black;
+        padding-top:25px;
+    }
+    .formcontainer{
+    display: flex;
+    flex-direction: row;
     margin-left:100px;
     margin-right:100px;
     border-radius: 10px;
     background-color: lightgray;
-    height:60vh;
+    height:65vh;
+}
+
+.circle{
+    height:50px;
+    width:50px;
+  
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius:25px;
+    background-color:#333;
+    margin-left:30px;
 }
 
 .formfields{
@@ -56,9 +149,10 @@ height:50%;
     width:60%;
     height:100%;
     color:black;
-    grid-template-rows:repeat(1fr,8);
+    grid-template-rows:repeat(6,1fr);
     grid-template-columns:1fr 1fr;
 }
+
 .headname{
     grid-row:1/2;
     grid-column:1/3
@@ -77,7 +171,8 @@ height:50%;
 }
 .message{
     grid-row:4/6;
-    grid-column:1/3
+    grid-column:1/3;
+
 }
 .sendbuttonspace{
     grid-row:6/7;
@@ -108,11 +203,12 @@ justify-content: center;
     border-radius:3px;
     margin-right:8px;
     border-bottom: 1px solid black;
-    
 }
+
 .formimage{
     width:40%;
     height:100%;
+    display:block;
     background-image: black;
     
 }
@@ -120,4 +216,5 @@ justify-content: center;
 width:100%;
 height:100%;
 object-fit: cover;
+}
 }
