--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,28 +1,53 @@
+
 .Landing{
- 
-    /* background-color: pink; */
-    background-color: rgba(51, 51, 51,0);;
+    background-color: rgba(51, 51, 51,0);
     position:relative;
     display:flex;
+    height:65vh;
     align-items: center;
     justify-content: center;
-    height:100vh;
-    width:100%;
-    max-width: 100%;
-    max-height:100%;
-    /* background-image:linear-gradient(90deg,rgba(0,0,0,0),rgba(0,0,0,1)) */
-    /* height:50vh;
-    width:50vw; */
+    padding-top:50px;
+}
+.headcontainer{
+    background-color: rgba(255,255,255,0.6);
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height:50vh;
+    width:90vw;
+    border-radius: 50px;
+}
+.logo_image{
+    height:250px;
+    width:400px;
 }
 
-.headcontainer{
-    display:flex;
-    height:450px;
-    width:50vw;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    background-color: rgba(255,255,255,0.8);
-    /* box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); */
-    /* margin-top: 100px; */
+@media only screen and (min-width:600px){
+    .Landing{
+        /* background-color: pink; */
+        margin-top:0px;
+        height:100vh;
+        width:100%;
+        max-width: 100%;
+        max-height:100%;
+        /* background-image:linear-gradient(90deg,rgba(0,0,0,0),rgba(0,0,0,1)) */
+        /* height:50vh;
+        width:50vw; */
+    }
+
+    .headcontainer{
+        background-color: rgba(255,255,255,0.8);
+        height:450px;
+        width:50vw;
+       
+        
+        /* box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); */
+        /* margin-top: 100px; */
+    }
+
+    .logo_image{
+        height:500px;
+        width:800px;
+    }
+    
 }
