--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,14 +1,14 @@
 .navbar{
-    /* position:fixed;
-    top:0; */
-    z-index:100;
-    display:flex;
-    background-color: #333;
-    width:100%;
-    height:60px;
-    align-items: center;
-  
-  }
+  /* position:fixed;
+  top:0; */
+  z-index:100;
+  display:flex;
+  background-color: #333;
+  width:100%;
+  height:50px;
+  align-items: center;
+  justify-content: flex-end;
+}
   
   .navbar ul{
     display:flex;
@@ -18,7 +18,7 @@
   }
   
   .navbar ul li{
-    margin:0 1rem;
+    margin:0 0.5rem;
     padding: 1rem;
   
   }
@@ -26,5 +26,21 @@
     text-decoration : none;
     text-transform : uppercase;
     color :#f4f4f4;
+    font-size: 12px;
   }
-  
+.hambruger_menu{
+  margin-left:50px;
+  margin-right:50px;
+}
+  @media only screen and (min-width:600px){
+    .navbar{
+      width:100%;
+      height:60px;
+    }
+
+    .navbar ul li{
+      margin:0 1rem;
+      padding: 1rem;
+    
+    }
+  }
