--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,35 +3,46 @@
   top:0; */
   z-index:100;
   display:flex;
+  position:relative;
   background-color: #333;
   width:100%;
   height:50px;
   align-items: center;
   justify-content: flex-end;
+  transition-property: all;
+  transition-delay: 1s;
+  transition-timing-function: linear;
+  transition-duration: 2s;
 }
-  
+
+.backburger{
+  margin-left:10px;
+}
+
   .navbar ul{
     display:flex;
     list-style:none;
     width:100%;
     justify-content: center;
   }
-  
+
   .navbar ul li{
     margin:0 0.5rem;
     padding: 1rem;
-  
   }
+
   .navbar ul li a{
     text-decoration : none;
     text-transform : uppercase;
     color :#f4f4f4;
     font-size: 12px;
   }
+
 .hambruger_menu{
   margin-left:50px;
   margin-right:50px;
 }
+
   @media only screen and (min-width:600px){
     .navbar{
       width:100%;
