--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -35,11 +35,23 @@
     border-bottom: 4px solid black;
 }
 @media only screen and (min-width:700px){
+    .Team{
+
+        width:100%;
+        height:auto;
+        padding-top:30px;
+        max-width:100%;
+        background-color: white;
+        color:black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .imageconatianer{
         /* margin:100px;
         background-color: yellow; */
         width:900px;
-        height:700px;
+        height:550px;
         margin-bottom: 0px;
     }
     .imageconatianer img{
