--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -32,6 +32,7 @@
     height:1px;
     width:100px;
     margin-top: 0px;
+    /* margin-bottom:30px; */
     border-bottom: 4px solid black;
 }
 @media only screen and (min-width:700px){
