--- a/src/components/Whatwedo.css
+++ b/src/components/Whatwedo.css
@@ -48,6 +48,14 @@ color:black
 
 
   @media only screen and (min-width:700px){
+    .Whatwedo{
+        padding-top: 30px;
+        padding-bottom:40px;
+        /* width:100%; */
+        background-color: white;
+        color:black
+        /* box-shadow:  0px 0px 20px 0px black; */
+        }
     .valuegrid{
         display:grid;
         grid-template-columns: 100px 1fr 80px 1fr 100px;
@@ -56,7 +64,6 @@ color:black
     .firstleft{
         grid-column: 2/4;
         grid-row:1/2;
-    
     }
     .firstright{
         grid-column: 4/5;
