done for the day 2.0

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -75,6 +75,11 @@ display:flex;
 border-radius:8px;
 align-items:center;
 justify-content: center;
+transition: background-color 1s ease-out 200ms;
+}
+.sendbutton:hover{
+    background-color:white;
+
 }
 .controlitem{
     display:flex;
